--- a/package.json
+++ b/package.json
@@ -11,5 +11,11 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
+  },
+  "script": {
+    "start": "nodemon server.js"
   }
 }
