--- a/backend/package.json
+++ b/backend/package.json
@@ -19,8 +19,9 @@
     "crypto": "^1.0.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.8.0"
-
+    "mongoose": "^6.8.0",
+    "multer": "^1.4.4",
+    "multer-gridfs-storage": "^5.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
