--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.47"
+    "@fortawesome/fontawesome-free": "^6.3.0",
+    "axios": "^1.3.4",
+    "bootstrap": "^5.2.3",
+    "pinia": "^2.0.33",
+    "vue": "^3.2.47",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
